# Sliding-Puzzle

./: CMakeLists.txt  board.cpp  board.h  classes.qmodel  end_scene.cpp  end_scene.h  game_manager.cpp  game_manager.h  game_scene.cpp  game_scene.h  immoveable_tile.cpp  immoveable_tile.h  leadership_scene.cpp  leadership_scene.h  main.cpp  main_menu_scene.cpp  main_menu_scene.h  moveable_tile.cpp  moveable_tile.h  my_button.cpp  my_button.h  my_check_box.cpp  my_check_box.h  my_image_select.cpp  my_image_select.h  my_label.cpp  my_label.h  my_pixmap_button.cpp  my_pixmap_button.h  my_radio_box.cpp  my_radio_box.h  my_rounded_rect.cpp  my_rounded_rect.h  my_select_box.cpp  my_select_box.h  my_text_box.cpp  my_text_box.h  my_timer.cpp  my_timer.h  score_parser.cpp  (+9 more)
